# ocr_text_from_docs_bot

./: .env_example  .gitignore  README.md  pyproject.toml
manage/: check_settings.py  demojize.py  generate_env_example.py  generate_requirements.txt.sh
manage/sandbox/: sandbox_1.py  sandbox_3.py
src/: main.py
src/blank/: public.py
src/business_service/: converters.py  get_text_from_pdf_doc.py  get_text_from_pdf_doc_with_gpt.py  get_text_from_photo.py  get_text_from_photo_with_gpt.py  get_text_from_photo_with_mistral.py  notify_admins.py  set_tg_bot_commands.py
src/core/: const.py  on_error.py  settings.py  setup_logging.py  transmitted_tg_bot_data.py  util.py
src/event/: on_shutdown.py  on_startup.py
src/filter/: filter_.py
src/kb/: inline.py  static.py
src/router/: about.py  convert_to_document.py  router.py  start.py  support.py  uploaded_pdf_file.py  uploaded_photo.py
src/util/: remove_markdown.py
